# classicube-anti-afk-plugin

./: Cargo.toml  flake.nix
.github/workflows/: build.yml  update-lock-files.yml
src/: lib.rs  timer.rs
